# mc-bot-manager

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bump_version.sh  download_data.py  download_recipes.py  main.cpp  mc-bot-manager.desktop  mc-bot-manager.rc  mkdocs.yml
.github/workflows/: bump-version.yml  docs.yml  linux-release.yml  release.yml  snapshot-release.yml  tag-version.yml  windows-release.yml
bot/: BotManager.cpp  BotManager.h
client/: .gitignore  LICENSE.txt  build.gradle  gradle.properties  settings.gradle
client/.github/workflows/: build.yml
client/src/client/java/me/mankool/mcBotClient/: McBotClient.java
client/src/client/java/me/mankool/mcBotClient/client/: McBotClientClient.java  McBotClientDataGenerator.java
client/src/client/java/me/mankool/mcBotClient/handler/: MessageHandler.java
client/src/client/java/me/mankool/mcBotClient/util/: ProtoUtil.java
client/src/client/resources/: mc-bot-client.client.mixins.json
client/src/compat/api_1_21_11/java/mankool/mcBotClient/util/: VersionCompat.java
client/src/compat/api_1_21_4/java/mankool/mcBotClient/util/: VersionCompat.java
client/src/compat/api_26_1/java/mankool/mcBotClient/util/: VersionCompat.java
client/src/compat/api_26_1/resources/: mc-bot-client.mixins.json
client/src/compat/legacy/java/mankool/mcBotClient/util/: VersionCompat.java
client/src/compat/modern/java/mankool/mcBotClient/util/: VersionCompat.java
client/src/main/java/mankool/mcBotClient/: McBotClient.java
client/src/main/java/mankool/mcBotClient/api/baritone/: IBaritoneSettingChangeListener.java
client/src/main/java/mankool/mcBotClient/client/: McBotClientClient.java  McBotClientDataGenerator.java
client/src/main/java/mankool/mcBotClient/connection/: PipeConnection.java
client/src/main/java/mankool/mcBotClient/handler/: MessageHandler.java
client/src/main/java/mankool/mcBotClient/handler/inbound/: BaritoneHandler.java  BaseInboundHandler.java  BlockFaceUtil.java  ChatHandler.java  ConnectionHandler.java  InventoryHandler.java  MeteorModuleHandler.java  ModuleToggleListener.java  PlayerActionHandler.java  ScreenInteractionHandler.java  WorldInteractionHandler.java
client/src/main/java/mankool/mcBotClient/handler/outbound/: BaseOutbound.java  ChatOutbound.java  ContainerOutbound.java  EntityOutbound.java  InventoryOutbound.java  PlayerOutbound.java  ScreenOutbound.java  ServerOutbound.java  (+2 more)
client/src/main/java/mankool/mcBotClient/proxy/: MeteorProxyManager.java
client/src/main/java/mankool/mcBotClient/util/: ProtoUtil.java
client/src/main/java/me/mankool/mcBotClient/: McBotClient.java
client/src/main/resources/: fabric.mod.json  mc-bot-client.mixins.json
docs/: event-handlers.md  events.md  examples.md  first-script.md  getting-started.md  index.md
docs/api/: baritone.md  bot.md  index.md  meteor.md  server.md  utils.md  world.md
logging/: LogManager.cpp
manager/: .gitignore  AppPaths.h  CMakeLists.txt  icons.qrc  main.cpp  pythonlibs.qrc  vcpkg.json
manager/.github/workflows/: linux-release.yml  windows-release.yml
manager/bot/: BotManager.cpp  BotManager.h  WorldData.cpp  WorldData.h
manager/crafting/: CraftingPlanner.cpp  CraftingPlanner.h  RecipeRegistry.cpp  RecipeRegistry.h
manager/logging/: LogFileSink.cpp  LogFileSink.h  LogManager.cpp  LogManager.h
manager/network/: PipeServer.cpp  PipeServer.h
manager/prism/: PrismHook.cpp  PrismHookLoader.cpp  PrismLauncherManager.cpp  PrismLauncherManager.h
manager/prism-hook/: PrismHook.cpp  PrismHookLoader.cpp
manager/pythonlibs/: _events.py  crafting.py  enchanting.py
manager/resources/: editor.html
manager/saving/: ChunkSavingWorker.cpp  ChunkSavingWorker.h  WorldAutoSaver.cpp  WorldAutoSaver.h
manager/scripting/: EmbeddedPythonLibs.h  PythonAPI.cpp  PythonAPI.h  PythonModules.cpp  ScriptContext.h  ScriptEngine.cpp  ScriptEngine.h  ScriptEventWorker.cpp  ScriptEventWorker.h  ScriptFileManager.cpp  ScriptFileManager.h  ScriptThread.cpp  ScriptThread.h  ZubanClient.cpp  ZubanClient.h
manager/scripts/: generate_stubs.py
manager/ui/: AppColors.h  BaritoneWidget.cpp  BaritoneWidget.h  BotConsoleWidget.cpp  BotConsoleWidget.h  BotDebugWidget.cpp  BotDebugWidget.h  ESPBlockDataMapEditorDialog.cpp  ESPBlockDataMapEditorDialog.h  GlobalSettingsDialog.cpp  GlobalSettingsDialog.h  ListEditorDialog.cpp  ListEditorDialog.h  ManagerMainWindow.cpp  ManagerMainWindow.h  ManagerMainWindow.ui  MapEditorDialog.cpp  MapEditorDialog.h  MeteorModulesWidget.cpp  MeteorModulesWidget.h  MonacoWidget.cpp  MonacoWidget.h  NetworkStatsWidget.cpp  NetworkStatsWidget.h  PrismSettingsDialog.cpp  PrismSettingsDialog.h  PrismSettingsDialog.ui  ScriptsWidget.cpp  ScriptsWidget.h  SettingEditorFactory.cpp  SettingEditorFactory.h  StringListEditorDialog.cpp  StringListEditorDialog.h  ZubanClient.cpp
manager/world/: BlockRegistry.cpp  BlockRegistry.h  ItemRegistry.cpp  ItemRegistry.h  NBTSerializer.cpp  NBTSerializer.h  RegionFile.cpp  RegionFile.h  WorldExporter.cpp  WorldExporter.h
network/: PipeServer.cpp
prism/: PrismLauncherManager.cpp
proto/: baritone.proto  chat.proto  commands.proto  common.proto  connection.proto  entities.proto  inventory.proto  meteor.proto  protocol.proto  registry.proto  screen.proto  world.proto
recipes/: 1_12_2.json  1_13.json  1_13_1.json  1_13_2.json  1_14_1.json  1_14_3.json  1_15.json  1_16_1.json  1_16_2.json  1_16_5.json  1_17.json  1_17_1.json  1_18_2.json  1_19_1.json  1_19_3.json  1_19_4.json  1_20_1.json  1_20_2.json  1_20_3.json  1_20_5.json  1_21_1.json  1_21_11.json  1_21_3.json  1_21_4.json  1_21_5.json  1_21_8.json  1_21_9.json  26_1_1.json
tags/item/: 1_13_1.json  1_14.json  1_14_4.json  1_15_1.json  1_16_1.json  1_20_6.json  1_21.json  1_21_11.json  1_21_2.json  1_21_4.json  1_21_5.json  1_21_8.json  1_21_9.json  26_1_2.json
ui/: BaritoneWidget.cpp  BaritoneWidget.h  BotConsoleWidget.h  ManagerMainWindow.cpp  ManagerMainWindow.h  ManagerMainWindow.ui  MeteorModulesWidget.cpp  MeteorModulesWidget.h  NetworkStatsWidget.cpp  NetworkStatsWidget.h  PrismSettingsDialog.h  PrismSettingsDialog.ui
(+28 files in other folders)
